--- a/src/GoogleMaterialDesignIconsGenerator/GoogleMaterialDesignIconsGenerator.csproj
+++ b/src/GoogleMaterialDesignIconsGenerator/GoogleMaterialDesignIconsGenerator.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.10.0-3.final" />
+    <PackageReference Include="Spectre.Console" Version="0.49.1" />
   </ItemGroup>
 
   <ItemGroup>
